package com.netty.example.server.proto;
import "google/protobuf/any.proto";

//消息类型
enum MessageType {

    //数据
    DATA = 1;

    //信令
    SIGNALLING = 2;
}

//负载数据类型
enum PayloadType {

    //连接请求
    CONNECTION_REQUEST = 1;

    //连接响应
    CONNECTION_RESPONSE = 2;

    //ping
    PING = 3;

    //pong
    PONG = 4;

    //任务消息
    TASK = 5;
}

//消息头
message MessageHeader {

    //消息id
    required string id = 1;

    //过期时间，-1表示不过期
    required int64 expireTimes = 2;

    //优先级
    required int32 priority = 3;

    //消息类型
    required MessageType type = 4;

    //是否加密
    required bool isEncryption = 5;

    //是否需要ack
    required bool needAck = 6;

    //消息来源
    required string referer = 8;

    //消息的数据类型
    required PayloadType payloadType = 9;
}

//消息
message WrapperMessage {

    //消息头
    required MessageHeader header = 1;

    //消息内容
    required bytes payload = 2;

}

//连接消息
message ConnectionRequestMessage {

    //会话标识
    required string sessionIdentifier = 1;

}

//连接状态
enum ConnectionStatus {

    //连接成功
    SUCCESS = 1;

    //连接错误
    ERROR = 2;

    //重复连接
    REPEATED = 3;
}

//连接响应消息
message ConnectionResponseMessage {

    //连接状态
    required ConnectionStatus status = 1;

    //错误消息
    optional string errorMessage = 2;
}

//ping 消息
message PingMessage {

    //ping 1
    required int32 ping = 1;
}

//pong 消息
message PongMessage {

    //pong 1
    required int32 pong = 1;
}


